--- a/templates/index.html
+++ b/templates/index.html
@@ -28,14 +28,10 @@
   <body class="bg-sky-950 work-sans text-slate-100" id="body">
     <div class="container mx-auto">
       {{template "header"}}
-      <div class="grid grid-cols-8 gap-4">{{template "side-nav" .}}</div>
-      {{if .ContactMe }}
-      <div>{{template "contact-me"}}</div>
-      {{else if .Portfolio}}
-      <div>{{template "portfolio"}}</div>
-      {{else}}
-      <div>{{template "about-me"}}</div>
-      {{end}}
+      <div class="grid grid-cols-8 gap-4">{{template "nav" .}}</div>
+      <div>
+        {{template (call .GetTemplate)}}
+      </div>
     </div>
   </body>
 </html>
